Fix CI/CD workflow

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,8 +1,19 @@
+name: CI/CD Selenium Test
+
+on:
+  push:
+    branches:
+      - main
+  pull_request:
+    branches:
+      - main
+
 jobs:
   test:
     runs-on: ubuntu-latest
+
     steps:
-      - name: Check out repository
+      - name: Checkout repository
         uses: actions/checkout@v3
 
       - name: Set up Python
@@ -11,7 +22,10 @@ jobs:
           python-version: '3.9'
 
       - name: Install dependencies
-        run: pip install selenium webdriver-manager
+        run: |
+          pip install -r requirements.txt
+          sudo apt update && sudo apt install -y chromium-chromedriver
+          echo "CHROMEDRIVER_PATH=$(which chromedriver)" >> $GITHUB_ENV
 
       - name: Run Selenium test
         run: python test_example.py
